MB-47022: Fix data race on vptr (ProcessMonitor)

The problem is was that the thread monitoring the process
would call the virtual function isRunning() during
object destruction.

Refactored the code with a proxy object which explicitly
shut down the monitor thread before destroying the object.

Change-Id: I07d783477e9f06d7aa81d7199d61683f8469981a
Reviewed-on: https://review.couchbase.org/c/platform/+/168524
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>